Compiler/fasto/tests/and_neg1.fo
fun int main () = 
  let w = write(true && 1) in 0